--- a/package.json
+++ b/package.json
@@ -16,7 +16,12 @@
     "quasar": "^1.0.0"
   },
   "devDependencies": {
-    "@quasar/app": "^1.0.0"
+    "@quasar/app": "^1.0.0",
+    "devtron": "^1.4.0",
+    "electron": "^9.1.0",
+    "electron-debug": "^3.1.0",
+    "electron-devtools-installer": "^3.1.1",
+    "electron-packager": "^14.2.1"
   },
   "engines": {
     "node": ">= 10.18.1",
